--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Brunch House",
+  "name": "Brunch House Bordeaux",
+  "description": "Le meilleur brunch de Bordeaux - Restaurant chaleureux à Bacalan avec cuisine maison et produits frais locaux",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,16 +11,22 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#1C3F33",
+  "background_color": "#F7F2E7",
+  "orientation": "portrait",
+  "scope": "/",
+  "lang": "fr",
+  "categories": ["food", "restaurant", "lifestyle"]
 }
