--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.23.12",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
