--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Brunch House",
   "name": "Brunch House Bordeaux",
-  "description": "Le meilleur brunch de Bordeaux - Restaurant chaleureux à Bacalan avec cuisine maison et produits frais locaux",
+  "description": "Le brunch comme vous ne l'avez jamais imaginé. - Restaurant chaleureux à Bordeaux avec cuisine maison et produits frais.",
   "icons": [
     {
       "src": "favicon.ico",
