--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "CI=false react-scripts build && npm run post-build",
+    "build:render": "CI=false react-scripts build && npm run post-build",
+    "post-build": "node scripts/post-build.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compress-images": "node compress-images.js"
+    "compress-images": "node compress-images.js",
+    "serve": "npx serve -s build -l 3000"
   },
   "eslintConfig": {
     "extends": [
